--- a/app/views/skills/edit.html.erb
+++ b/app/views/skills/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Skill</h1>
+<div class="span1">
+</div>
+<%= render "skills/form" %>
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @skill %> |
-<%= link_to 'Back', skills_path %>
+
