--- a/app/views/trainings/new.html.erb
+++ b/app/views/trainings/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New Training</h1>
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="span2">
+        <div class="sidebar">
+          <%= render "staffs/main_staff_menu" %>
+        </div>
+      </div>
+      <div class="span2"></div>
+      <%= render "trainings/form" %>
+    </div>
+  </div>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', staff_trainings_path %>
+
