--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,9 +1,34 @@
-<p id="notice"><%= notice %></p>
+<div class="wrapper">
 
-<h1>Listing Welcomes</h1>
+  <div class="container">
+    <div class="row">
+      <div class="module module-login span7 offset2">
+        <div class="form-vertical">
+
+          <div class="module-head">
+            <h3>Before you begin</h3>
+          </div>
+          <div class="module-body">
+            <ul>
+              <p>Gather your information </p>
+              <p>You will need the following</p>
+              <li>Personal Information</li>
+              <li>Qualifications btained with dates</li>
+              <li>Skills acquired and their levels</li>
+              <li>Trainings attended</li>
+
+              Click on type your file number to complete existing record entry</p>
+              <%#= link_to 'Start', new_user_staff_path, class:"btn btn-primary"  %>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!--/.wrapper-->
 
 
-
-<br>
-
-<%= link_to 'New staff', new_staff_path %>
+<script src="jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
+<script src="bootstrap.min.js" type="text/javascript"></script>
