--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -9,58 +9,61 @@
       </div>
       <div class="span0">
       </div>
-      <div class="span9">
-        <table class="table table-striped table-condensed">
-          <div class="module">
+      <div class="span10">
+        <div class="content">
+          <div class="module message">
             <div class="module-head">
               <h2>Query Index</h2>
               <div class="module-option clearfix">
                 <div class="pull-right">
-                  <%= link_to "Add Query", new_query_path,class:"btn btn-primary" %>
+                  <%= link_to "Add Query", new_query_path, class: "btn btn-primary" %>
                 </div>
               </div> <!-- clearfix-->
-
-
-
+            </div>
             <div class="module-body table">
-              <table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped	 display" width="100%">
-                <thead>
-                <tr>
 
-                  <th>Name</th>
-                  <th>Fields</th>
-                  <th>Clause</th>
-                  <th>Query</th>
-                  <th>Count</th>
-                  <th></th>
-                  <th></th>
+              <table class="table table-message">
 
-                  <th colspan="3"></th>
-                </tr>
-                </thead>
                 <tbody>
+                <tr class="heading">
+                  <td class="cell-title">Code</td>
+                  <td class="cell-title">Name</td>
+                  <td class="cell-title">Tables</td>
+                  <td class="cell-icon">Fields</td>
+                  <td class="cell-title">Clause</td>
+                  <td class="cell-title">Query</td>
+                  <td class="cell-icon">Count</td>
+                  <td class="cell-icon"></td>
+                  <td class="cell-icon"></td>
+                  <td class="cell-icon"></td>
+                </tr>
+
                 <% @queries.each do |q| %>
                     <% if (q.id) %2==0 %>
                         <tr class="even gradeX">
-
-                          <td class="cell-title"><%=  link_to  q.name%></td>
+                          <td class="cell-title"><%= q.query_code %></td>
+                          <td class="cell-title"><%= q.name %></td>
+                          <td class="cell-title"><%= q.table_list %></td>
                           <td class="cell-title"><%= q.fields %></td>
                           <td class="cell-title"><%= q.where_clause %></td>
-                          <td class="cell-title"><%= q.query %></td>
-                          <td class="cell-title"><%= q.count %></td>
+                          <td class="cell-title"><%= q.query_string %></td>
+                          <td class="inbox-checkbox"><%= q.count %></td>
 
-                          <td><%= link_to 'Show', q %></td>
+                          <td><%= link_to 'Show', query_path(q) %></td>
                           <td><%= link_to 'Edit', edit_query_path(q) %></td>
                           <td><%= link_to 'Destroy', q, method: :delete, data: { confirm: 'Are you sure?' } %></td>
                         </tr>
                     <% else %>
 
                         <tr class="odd gradeX">
-                          <td class="cell-title"><%=  link_to  q.name%></td>
+                          <td class="cell-title"><%= q.query_code %></td>
+                          <td class="cell-title"><%= q.name %></td>
+                          <td class="cell-title"><%= q.table_list %></td>
+
                           <td class="cell-title"><%= q.fields %></td>
                           <td class="cell-title"><%= q.where_clause %></td>
-                          <td class="cell-title"><%= q.query %></td>
-                          <td class="cell-title"><%= q.count %></td>
+                          <td class="cell-title"><%= q.query_string %></td>
+                          <td class="cell-check"><%= q.count %></td>
                           <td><%= link_to 'Show', q %></td>
                           <td><%= link_to 'Edit', edit_query_path(q) %></td>
                           <td><%= link_to 'Destroy', q, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -73,9 +76,8 @@
             </div>
           </div>
           </div>
-        </table>
-      </div>
 
+      </div>
     </div>
   </div>
 </div>
