--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -10,77 +10,67 @@
       <div class="span1">
       </div>
       <div class="span8">
-        <table class="table table-striped table-condensed">
-          <div class="module">
+        <div class="content">
+          <div class="module message">
             <div class="module-head">
               <h3>Query Result : <%= @query.name%></h3>
-              <div class="module-option clearfix">
-                <div class="pull-right">
-                  <%= link_to "Get Grpahics", '#',class:"btn btn-primary" %>
-                </div>
-              </div> <!-- clearfix-->
-
             </div>
-
+            <div class="module-option clearfix">
+              <div class="pull-left">
+                <div class="btn-group">
+                  <button class="btn">
+                    Queries
+                  </button>
+                  <button class="btn dropdown-toggle" data-toggle="dropdown">
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu">
+                  </ul>
+                </div>
+              </div>
+              <div class="pull-right">
+                <%= link_to "Create Chart", new_chart_path, class: "btn btn-primary" %>
+              </div>
+            </div>
             <div class="module-body table">
-              <table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped	 display" width="100%">
-                <thead>
-                <tr>
-                  <th>File no</th>
-                  <th>Last name</th>
-                  <th>First name</th>
-                  <th>Middle name</th>
-                  <th>Rank</th>
-                  <th>Gender</th>
-                  <th>Area specialize</th>
-                  <th>Qualification</th>
-                  <th>Station</th>
-                  <th>Department</th>
-                  <th colspan="3"></th>
-                </tr>
-                </thead>
+              <table class="table table-message">
                 <tbody>
-                <% @results.each do |q| %>
-                    <% if (q.id) %2==0 %>
-                        <tr class="even gradeX">
+                <tr class="heading">
+                  <% columns=@result.columns.count %>
+                  <% @result.columns.each do |c| %>
+                      <td class="cell-author hidden-phone hidden-tablet">
+                        <%= c.humanize %>
+                      </td>
+                  <% end %>
+                </tr>
 
-                          <td><%= q.file_no %></td>
-                          <td><%= q.last_name %></td>
-                          <td><%= q.first_name %></td>
-                          <td><%= q.middle_name %></td>
-                          <td><%= q.rank %></td>
-                          <td><%= q.gender %></td>
-                          <td><%= q.area_specialize %></td>
-                          <td><%= q.qualification %></td>
-                          <td><%= q.station %></td>
-                          <td><%= q.department %></td>
+                <% @result.rows.each do |q| %>
+                    <% c = 0 %>
+                    <% if (q[0]) %2 ==0 %>
+                        <tr class="even gradeX">
+                          <td class="cell-title"><%= q[c] %></td>
+                          <td class="cell-title"><%= q[c+1] %></td>
+                          <td class="cell-title"><%= q[c+2] %></td>
+                          <td class="cell-title"><%= q[c+3] %></td>
+                          <td class="cell-title"><%= q[c+4] %></td>
                         </tr>
                     <% else %>
-
                         <tr class="odd gradeX">
-                          <td><%= q.file_no %></td>
-                          <td><%= q.last_name %></td>
-                          <td><%= q.first_name %></td>
-                          <td><%= q.middle_name %></td>
-                          <td><%= q.rank %></td>
-                          <td><%= q.gender %></td>
-                          <td><%= q.area_specialize %></td>
-                          <td><%= q.qualification %></td>
-                          <td><%= q.station %></td>
-                          <td><%= q.department %></td>
+                          <td class="cell-title"><%= q[c] %></td>
+                          <td class="cell-title"><%= q[c+1] %></td>
+                          <td class="cell-title"><%= q[c+2] %></td>
+                          <td class="cell-title"><%= q[c+3] %></td>
+                          <td class="cell-title"><%= q[c+4] %></td>
                         </tr>
                     <% end %>
+
+                    </tbody>
                 <% end %>
-                </tbody>
               </table>
             </div>
           </div>
-        </table>
       </div>
-
     </div>
   </div>
 </div>
-
-
-
+</div>
