--- a/app/views/set_departments/index.html.erb
+++ b/app/views/set_departments/index.html.erb
@@ -13,7 +13,7 @@
         <table class="table table-striped table-condensed">
           <div class="module">
             <div class="module-head">
-              <h3>Station Index</h3>
+              <h3>Department Index</h3>
               <div class="module-option clearfix">
                 <div class="pull-right">
                   <%= link_to 'Add Department', new_set_department_path,class:"btn btn-primary" %>
@@ -36,10 +36,10 @@
                 </thead>
 
                 <tbody>
-
                 <% @set_departments.each do |set_department| %>
                     <% if (set_department.id) %2==0 %>
                         <tr class="even gradeX">
+
                           <td class="cell-title"><%= set_department.code %></td>
                           <td class="cell-title"><%= set_department.name %></td>
                           <td class="cell-title"><%= set_department.display %></td>
@@ -56,7 +56,8 @@
                           <td class="cell-title"><%= set_department.display %></td>
                           <td><%= link_to 'Show', set_department %></td>
                           <td><%= link_to 'Edit', edit_set_department_path(set_department) %></td>
-                          <td><%= link_to 'Destroy', set_department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                          <td><%= link_to 'Destroy', set_department, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+                        </tr>
                         </tr>
                     <% end %>
                 <% end %>
@@ -70,8 +71,5 @@
     </div>
   </div>
 </div>
-
-
-
 
 
