--- a/app/views/set_ranks/index.html.erb
+++ b/app/views/set_ranks/index.html.erb
@@ -1,31 +1,74 @@
-<p id="notice"><%= notice %></p>
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="span2">
+        <div class="sidebar">
+          <%= render "admin/main_admin_menu" %>
+        </div>
+      </div>
+      <div class="span0">
+      </div>
+      <div class="span8">
+        <table class="table table-striped table-condensed">
+          <div class="module">
+            <div class="module-head">
+              <h3>Rank Index</h3>
+              <div class="module-option clearfix">
+                <div class="pull-right">
+                  <%= link_to 'Add Rank', new_set_rank_path, class: "btn btn-primary" %>
+                </div>
+              </div> <!-- clearfix-->
 
-<h1>Listing Set Ranks</h1>
+            </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Code</th>
-      <th>Name</th>
-      <th>Display</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+            <div class="module-body table">
+              <table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped	 display" width="100%">
+                <thead>
+                <tr>
+                  <th>Code</th>
+                  <th>Name</th>
+                  <th>Displayed</th>
+                  <th></th>
+                  <th></th>
+                  <th colspan="3"></th>
+                </tr>
+                </thead>
 
-  <tbody>
-    <% @set_ranks.each do |set_rank| %>
-      <tr>
-        <td><%= set_rank.code %></td>
-        <td><%= set_rank.name %></td>
-        <td><%= set_rank.display %></td>
-        <td><%= link_to 'Show', set_rank %></td>
-        <td><%= link_to 'Edit', edit_set_rank_path(set_rank) %></td>
-        <td><%= link_to 'Destroy', set_rank, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                <tbody>
+                <% @set_ranks.each do |set_rank| %>
+                    <% if (set_rank.id) %2==0 %>
+                        <tr class="even gradeX">
 
-<br>
+                          <td class="cell-title"><%= set_rank.code %></td>
+                          <td class="cell-title"><%= set_rank.name %></td>
+                          <td class="cell-title"><%= set_rank.display %></td>
+                          <td><%= link_to 'Show', set_rank %></td>
+                          <td><%= link_to 'Edit', edit_set_rank_path(set_rank) %></td>
+                          <td><%= link_to 'Destroy', set_rank, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+                        </tr>
 
-<%= link_to 'New Set rank', new_set_rank_path %>
+                    <% else %>
+
+                        <tr class="odd gradeX">
+                          <td class="cell-title"><%= set_rank.code %></td>
+                          <td class="cell-title"><%= set_rank.name %></td>
+                          <td class="cell-title"><%= set_rank.display %></td>
+                          <td><%= link_to 'Show', set_rank %></td>
+                          <td><%= link_to 'Edit', edit_set_rank_path(set_rank) %></td>
+                          <td><%= link_to 'Destroy', set_rank, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+                        </tr>
+                        </tr>
+                    <% end %>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </table>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
