--- a/app/views/set_stations/_form.html.erb
+++ b/app/views/set_stations/_form.html.erb
@@ -1,29 +1,61 @@
-<%= form_for(@set_station) do |f| %>
-  <% if @set_station.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@set_station.errors.count, "error") %> prohibited this set_station from being saved:</h2>
+<div class="span6">
+  <div class="content">
 
-      <ul>
-      <% @set_station.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <div class="module">
+      <div class="module-head">
+        <h2>
+          <%= "Set Station" %>
 
-  <div class="field">
-    <%= f.label :code %><br>
-    <%= f.text_field :code %>
+        </h2>
+      </div>
+
+
+      <div class="module-body ">
+
+        <%= form_for(@set_station) do |f| %>
+            <% if @set_station.errors.any? %>
+                <div id="error_explanation">
+                  <h2><%= pluralize(@set_station.errors.count, "error") %> prohibited this set_station from being
+                    saved:</h2>
+
+                  <ul>
+                    <% @set_station.errors.full_messages.each do |message| %>
+                        <li><%= message %></li>
+                    <% end %>
+                  </ul>
+                </div>
+            <% end %>
+
+            <div class="field">
+              <%= f.label :code %><br>
+              <%= f.text_field :code %>
+            </div>
+            <div class="field">
+              <%= f.label :name %><br>
+              <%= f.text_field :name %>
+            </div>
+            <div class="field">
+              <%= f.label :display %><br>
+              <%= f.text_field :display %>
+            </div>
+            <div class="module-option clearfix">
+
+              <div class="pull-right">
+
+                <% if @set_station.new_record? %>
+
+                    <%= button_to "Create Station", {action: "create"}, class: "btn btn-primary" %>
+                <% elsif @set_station.persisted? %>
+
+                    <%= button_to "Update Station", {action: "update"}, class: "btn btn-primary" %>
+
+
+                <% end %>
+
+              </div>
+            </div> <!-- clearfix-->
+            </div>
+        <% end %>
+        </div>
   </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :display %><br>
-    <%= f.text_field :display %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
