--- a/app/views/set_stations/new.html.erb
+++ b/app/views/set_stations/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Set Station</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', set_stations_path %>
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="span2">
+        <div class="sidebar">
+          <%= render "admin/main_admin_menu" %>
+        </div>
+      </div>
+      <div class="span1">
+      </div>
+      <%= render "set_stations/form" %>
+    </div>
+  </div>
+</div>
