--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -1,33 +1,77 @@
-<p id="notice"><%= notice %></p>
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="span2">
+        <div class="sidebar">
+          <%= render "admin/main_admin_menu" %>
+        </div>
+      </div>
+      <div class="span0">
+      </div>
+      <div class="span9">
+        <table class="table table-striped table-condensed">
+          <div class="module">
+            <div class="module-head">
+              <h3>Skill Index</h3>
+              <div class="module-option clearfix">
+                <div class="pull-right">
+                  <%= link_to "Export to file", '#', class: "btn btn-primary" %>
+                </div>
+              </div> <!-- clearfix-->
 
-<h1>Listing Skills</h1>
+            </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Oral score</th>
-      <th>Written score</th>
-      <th>Analytic score</th>
-      <th>Computing score</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+            <div class="module-body table">
+              <table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped	 display" width="100%">
+                <thead>
+                <tr>
 
-  <tbody>
-    <% @skills.each do |skill| %>
-      <tr>
-        <td><%= skill.oral_score %></td>
-        <td><%= skill.written_score %></td>
-        <td><%= skill.analytic_score %></td>
-        <td><%= skill.computing_score %></td>
-        <td><%= link_to 'Show', skill %></td>
-        <td><%= link_to 'Edit', edit_skill_path(skill) %></td>
-        <td><%= link_to 'Destroy', skill, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                  <th>Oral score</th>
+                  <th>Written score</th>
+                  <th>Analytic score</th>
+                  <th>Computing score</th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th colspan="3"></th>
+                </tr>
+                </thead>
 
-<br>
+                <tbody>
+                <% @skills.each do |skill| %>
+                    <% if (skill.id) %2==0 %>
+                        <tr class="even gradeX">
+                          <td class="cell-title"><%= skill.oral_score %></td>
+                          <td class="cell-title"><%= skill.written_score %></td>
+                          <td class="cell-title"><%= skill.analytic_score %></td>
+                          <td class="cell-title"><%= skill.computing_score %></td>
+                          <td class="cell-title"><%= link_to 'Show', skill %></td>
+                          <td class="cell-title"><%= link_to 'Edit', edit_staff_skill_path(skill) %></td>
+                          <td class="cell-title"><%= link_to 'Destroy', skill, method: :delete, data: {confirm: 'Are you sure?'} %></td>
 
-<%= link_to 'New Skill', new_skill_path %>
+                        </tr>
+                    <% else %>
+
+                        <tr class="odd gradeX">
+                          <td class="cell-title"><%= skill.oral_score %></td>
+                          <td class="cell-title"><%= skill.written_score %></td>
+                          <td class="cell-title"><%= skill.analytic_score %></td>
+                          <td class="cell-title"><%= skill.computing_score %></td>
+                          <td class="cell-title"><%= link_to 'Show', skill %></td>
+                          <td class="cell-title"><%= link_to 'Edit', edit_staff_skill_path(skill) %></td>
+                          <td class="cell-title"><%= link_to 'Destroy', skill, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+                        </tr>
+
+                    <% end %>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </table>
+      </div>
+
+    </div>
+  </div>
+</div>
+
