--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New Skill</h1>
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="span2">
+        <div class="sidebar">
+          <%= render "staffs/main_staff_menu" %>
+        </div>
+      </div>
+      <div class="span1">
+      </div>
+      <%= render "skills/form" %>
+    </div>
+  </div>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', new_staff_skill_path %>
+
