--- a/app/views/staffs/_more_form.html.erb
+++ b/app/views/staffs/_more_form.html.erb
@@ -1,11 +1,9 @@
-
-      <div class="span1">
+<div class="span2">
       </div>
       <div class="span10">
-        <table class="table table-striped table-condensed">
           <div class="module">
             <div class="module-head">
-              <h3>Profile: <%= @staff.last_name << ", " << @staff.first_name%></h3>
+              <h3>Profile: <%= @staff.last_name << ", " << @staff.first_name << " " << @staff.middle_name %></h3>
               <div class="module-option clearfix">
 
               </div> <!-- clearfix-->
@@ -13,24 +11,26 @@
             </div>
 
             <div class="module-body table">
-              <table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped	 display" width="100%">
+
+              <table class="datatable-1 table table-striped table-condensed table-bordered table-striped display" cellpadding="0" cellspacing="0" border="0" width="100%">
+
                 <thead>
                 <tr>
 
-                  <th>File no</th>
+                  <th>File#</th>
                   <th>Last name</th>
                   <th>First name</th>
                   <th>Middle name</th>
                   <th>Rank</th>
-                  <th>Gender</th>
-                  <th>Area Specialize</th>
-                  <th>Qualiftn</th>
+                  <th>Sex</th>
+                  <th>Area Spec.</th>
+                  <th>Qual.</th>
                   <th>Station</th>
                   <th>Dept.</th>
                   <th>Section</th>
                   <th>Grade</th>
                   <th>Step</th>
-                  <th>Submitted</th>
+                  <th>Done</th>
                   <th colspan="3"></th>
                 </tr>
                 </thead>
@@ -46,49 +46,192 @@
                   <td class="cell-title"><%= staff.middle_name %></td>
                   <td class="cell-title"><%= staff.rank %></td>
                   <td class="cell-title"><%= staff.gender %></td>
-                  <td class="cell-title"><%= staff.area_specialize %></td>
+                  <td class="cell-title"><%= staff.area_of_specialization %></td>
                   <td class="cell-title"><%= staff.qualification %></td>
                   <td class="cell-title"><%= staff.station %></td>
                   <td class="cell-title"><%= staff.department %></td>
                   <td class="cell-title"><%= staff.section %></td>
                   <td class="cell-title"><%= staff.grade %></td>
                   <td class="cell-title"><%= staff.step %></td>
-                  <td class="cell-title"><%= staff.submitted %></td>
+                  <td class="cell-check">
+                    <%= check_box_tag 'nil', staff.submitted, false, options={diabled: true, class: "inbox-checkbox"} %>
+                  </td>
+
+
                 </tr>
 
                 </tbody>
               </table>
+
+
             </div>
 
-
-
-              <table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped	 display" width="100%">
-                <thead>
-                <tr>
-
-                  <th>Oral Score</th>
-                  <th>Written Score</th>
-                  <th>Analytical Score</th>
-                  <th>Computing Score</th>
-                  <th colspan="3"></th>
-                </tr>
-                </thead>
-
-                <tbody>
-                  <% @staff.skills.each do |s|%>
-                      <%# if (staff.id) %2==0 %>
-                      <tr class="odd gradeX">
-
-                        <td class="cell-title"><%= s.oral_score %></td>
-                        <td class="cell-title"><%= s.written_score %></td>
-                        <td class="cell-title"><%= s.analytic_score %></td>
-                        <td class="cell-title"><%= s.computing_score %></td>
-                      </tr>
-                <% end %>
-                </tbody>
-              </table>
-
           </div>
-        </table>
+
       </div>
+<div class="span10">
+  <div class="module message">
+    <div class="module-head">
+      <h3>Academic Information</h3>
+
+    </div>
+    <div class="module-body table">
+      <table class="table table-message">
+
+        <tbody>
+        <tr class="heading">
+          <td class="cell-title">Course</td>
+          <td class="cell-title">Grade</td>
+          <td class="cell-title">School</td>
+          <td class="cell-title">Admission</td>
+          <td class="cell-title">Graduation</td>
+          <td class="cell-title">Certificate</td>
+          <td></td>
+        </tr>
+        <% @staff.academics.each do |academic| %>
+            <% if (academic.id) %2==0 %>
+                <tr class="even gradeX">
+                  <td class="cell-title"><%= academic.course %></td>
+                  <td class="cell-title"><%= academic.grade %></td>
+                  <td class="cell-title"><%= academic.school %></td>
+                  <td class="cell-title"><%= academic.admission_date %></td>
+                  <td class="cell-title"><%= academic.graduation_date %></td>
+                  <td class="cell-title"><%= academic.certificate %></td>
+                </tr>
+            <% else %>
+
+                <tr class="odd gradeX">
+                  <td class="cell-title"><%= academic.course %></td>
+                  <td class="cell-title"><%= academic.grade %></td>
+                  <td class="cell-title"><%= academic.school %></td>
+                  <td class="cell-title"><%= academic.admission_date %></td>
+                  <td class="cell-title"><%= academic.graduation_date %></td>
+                  <td class="cell-title"><%= academic.certificate %></td>
+                </tr>
+
+            <% end %>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
+<div class="span10">
+  <div class="module message">
+    <div class="module-head">
+      <h3>Profession Information</h3>
+
+    </div>
+    <div class="module-body table">
+      <table class="table table-message">
+
+        <tbody>
+        <tr class="heading">
+          <td class="cell-title">Course</td>
+          <td class="cell-title">Grade</td>
+          <td class="cell-title">School</td>
+          <td class="cell-title">Admission</td>
+          <td class="cell-title">Graduation</td>
+          <td class="cell-title">Certificate</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <% @staff.proffessionals.each do |p| %>
+            <% if (p.id) %2==0 %>
+                <tr class="even gradeX">
+                  <td class="cell-title"><%= p.course %></td>
+                  <td class="cell-title"><%= p.grade %></td>
+                  <td class="cell-title"><%= p.school %></td>
+                  <td class="cell-title"><%= p.admission_date %></td>
+                  <td class="cell-title"><%= p.graduation_date %></td>
+                  <td class="cell-title"><%= p.certificate %></td>
+                </tr>
+            <% else %>
+
+                <tr class="odd gradeX">
+                  <td class="cell-title"><%= p.course %></td>
+                  <td class="cell-title"><%= p.grade %></td>
+                  <td class="cell-title"><%= p.school %></td>
+                  <td class="cell-title"><%= p.admission_date %></td>
+                  <td class="cell-title"><%= p.graduation_date %></td>
+                  <td class="cell-title"><%= p.certificate %></td>
+                </tr>
+
+            <% end %>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
+<div class="span10">
+  <div class="module message">
+    <div class="module-head">
+      <h3>Skill Information</h3>
+
+    </div>
+    <div class="module-body table">
+      <table class="table table-message">
+
+        <tbody>
+        <tr class="heading">
+          <td class="cell-title">Oral Score</td>
+          <td class="cell-title">Written Score</td>
+          <td class="cell-title">Analytical Score</td>
+          <td class="cell-title">Computing Score</td>
+          <td class="cell-title">Technical Score</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <% @staff.skills.each do |skill| %>
+            <%# if (staff.id) %2==0 %>
+            <tr class="odd gradeX">
+              <td class="cell-title"><%= skill.oral_score %></td>
+              <td class="cell-title"><%= skill.written_score %></td>
+              <td class="cell-title"><%= skill.analytic_score %></td>
+              <td class="cell-title"><%= skill.computing_score %></td>
+              <td class="cell-title"><%= skill.technical_score %></td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+          </div>
+
+</div>
+<div class="span10">
+  <div class="module message">
+    <div class="module-head">
+      <h3>Training Information</h3>
+
+    </div>
+    <div class="module-body table">
+      <table class="table table-message">
+
+        <tbody>
+        <tr class="heading">
+          <td class="cell-title">Code</td>
+          <td class="cell-title">Category</td>
+          <td class="cell-title">Title</td>
+          <td class="cell-title">Date attended</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <% @staff.trainings.each do |training| %>
+
+            <tr class="even gradeX">
+              <td class="cell-title"><%= training.code %></td>
+              <td class="cell-title"><%= training.category %></td>
+              <td class="cell-title"><%= training.title %></td>
+              <td class="cell-time align-right"><%= training.date_attended %></td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
 
