--- a/app/views/staffs/new.html.erb
+++ b/app/views/staffs/new.html.erb
@@ -7,6 +7,8 @@
           <%= render "staffs/main_staff_menu"%>
         </div>
       </div>
+      <div class="span1">
+      </div>
       <%= render "staffs/form" %>
     </div>
   </div>
