--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -1,4 +1,22 @@
-<%= form_for([@staff, @training]) do |f| %>
+<div class="span9">
+  <div class="content">
+
+    <div class="module">
+      <div class="module-head">
+        <h2>
+          <% if @training.new_record? %>
+              <%= "New Training Info" %>
+          <% else %>
+              <%= "Edit Training Info" %>
+          <% end %>
+        </h2>
+      </div>
+
+
+      <div class="module-body ">
+
+
+        <%= form_for([@staff, @training]) do |f| %>
   <% if @training.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@training.errors.count, "error") %> prohibited this training from being saved:</h2>
@@ -27,7 +45,24 @@
     <%= f.label :date_attended %><br>
     <%= f.datetime_select :date_attended %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+            <div class="module-option clearfix">
+
+              <div class="pull-right">
+
+                <% if @training.new_record? %>
+
+                    <%= button_to "Create Training", {action: "create"}, class: "btn btn-primary" %>
+                <% elsif @training.persisted? %>
+                    <%= button_to "Update Training", {action: "update"}, class: "btn btn-primary" %>
+                <% end %>
+
+              </div>
+            </div> <!-- clearfix-->
+
+        <% end %>
+
+      </div>
+    </div>
   </div>
-<% end %>
+</div>
