--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -1,33 +1,80 @@
-<p id="notice"><%= notice %></p>
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="span2">
+        <div class="sidebar">
+          <%= render "staffs/main_staff_menu" %>
+        </div>
+      </div>
+      <div class="span0">
+      </div>
+      <div class="span8">
+        <table class="table table-striped table-condensed">
+          <div class="module">
+            <div class="module-head">
+              <h3>Training List</h3>
+              <div class="module-option clearfix">
+                <div class="pull-right">
+                  <%= link_to 'Add Training', new_staff_training_path, class: "btn btn-primary" %>
+                </div>
+              </div> <!-- clearfix-->
 
-<h1>Listing Trainings</h1>
+            </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Code</th>
-      <th>Category</th>
-      <th>Title</th>
-      <th>Date attended</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+            <div class="module-body table">
+              <table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped	 display" width="100%">
+                <thead>
+                <tr>
+                  <th>Code</th>
+                  <th>Category</th>
+                  <th>Title</th>
+                  <th>Date attended</th>
+                  <th></th>
+                  <th></th>
+                  <th colspan="3"></th>
+                </tr>
+                </thead>
 
-  <tbody>
-    <% @trainings.each do |training| %>
-      <tr>
-        <td><%= training.code %></td>
-        <td><%= training.category %></td>
-        <td><%= training.title %></td>
-        <td><%= training.date_attended %></td>
-        <td><%= link_to 'Show', [@staff, training] %></td>
-        <td><%= link_to 'Edit', [:edit, @staff, training] %></td>
-        <td><%= link_to 'Destroy', [@staff,training], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                <tbody>
+                <% @trainings.each do |training| %>
+                    <% if (training.id) %2==0 %>
+                        <tr class="even gradeX">
 
-<br>
+                          <td class="cell-title"><%= training.staff_id %></td>
+                          <td class="cell-title"><%= training.code %></td>
+                          <td class="cell-title"><%= training.category %></td>
+                          <td class="cell-title"><%= training.title %></td>
+                          <td class="cell-title"><%= training.date_attended %></td>
+                          <td class="cell-title"><%= link_to 'Show', [@staff, training] %></td>
+                          <td class="cell-title"><%= link_to 'Edit', [:edit, @staff, training] %></td>
+                          <td class="cell-title"><%= link_to 'Delete', [@staff, training], method: :delete, data: {confirm: 'Are you sure?'} %></td>
+                        </tr>
 
-<%= link_to 'New Training', new_staff_training_path %>
+                    <% else %>
+
+                        <tr class="odd gradeX">
+                          <td class="cell-title"><%= training.staff_id %></td>
+                          <td class="cell-title"><%= training.code %></td>
+                          <td class="cell-title"><%= training.category %></td>
+                          <td class="cell-title"><%= training.title %></td>
+                          <td class="cell-title"><%= training.date_attended %></td>
+                          <td class="cell-title"><%= link_to 'Show', [@staff, training] %></td>
+                          <td class="cell-title"><%= link_to 'Edit', [:edit, @staff, training] %></td>
+                          <td class="cell-title"><%= link_to 'Delete', [@staff, training], method: :delete, data: {confirm: 'Are you sure?'} %></td>
+                        </tr>
+
+                    <% end %>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </table>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
