--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,64 @@
-<p id="notice"><%= notice %></p>
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="span2">
+        <div class="sidebar">
+          <%= render "admin/main_admin_menu" %>
+        </div>
+      </div>
+      <div class="span0">
+      </div>
+      <div class="span8">
+        <table class="table table-striped table-condensed">
+          <div class="module">
+            <div class="module-head">
+              <h3>User Index</h3>
 
-<h1>Listing Users</h1>
+            </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+            <div class="module-body table">
+              <table cellpadding="0" cellspacing="0" border="0" class="datatable-1 table table-bordered table-striped	 display" width="100%">
+                <thead>
+                <tr>
+                  <th>Username</th>
+                  <th>Email</th>
+                  <th>Last Login</th>
+                  <th></th>
+                  <th></th>
+                  <th colspan="3"></th>
+                </tr>
+                </thead>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                <tbody>
+                <% @users.each do |user| %>
+                    <% if (user.id) %2==0 %>
+                        <tr class="even gradeX">
+                          <td class="cell-title"><%= user.username %></td>
+                          <td class="cell-title"><%= user.email %></td>
+                          <td><%= link_to 'Show', user %></td>
+                          <td><%= link_to 'Edit', edit_user_path(user) %></td>
+                          <td><%= link_to 'Destroy', user, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+                        </tr>
+                    <% else %>
 
-<br>
+                        <tr class="odd gradeX">
+                          <td class="cell-title"><%= user.username %></td>
+                          <td class="cell-title"><%= user.email %></td>
 
-<%= link_to 'New User', new_user_path %>
+                          <td><%= link_to 'Show', user %></td>
+                          <td><%= link_to 'Edit', edit_user_path(user) %></td>
+                          <td><%= link_to 'Destroy', user, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+                        </tr>
+                    <% end %>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </table>
+      </div>
+
+    </div>
+  </div>
+</div>
+
